[package]
name = "pdx-txt"
version = "0.1.0"
authors = ["Mac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"failure" = "0.1"
"nom" = "5.0"

[dev-dependencies]
"encoding" = "0.2"

[[example]]
name = "load"